# Wolfenstein-3D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FileStructure.md  Makefile  Makefile.alt  README.md  RUNCMDS.txt  TODO.md  cmake_install.cmake  compile_commands.json  data.json  game.cpp  test.cpp  test.py  test2.cpp  testing
.github/workflows/: c-cpp.yml  cmake.yml
mapmaker/: mapmaker.py
memory_analysis/: 2020-10-21_01-15-02.memgraph  2020-10-21_01-42-16.memgraph
resources/configs/: config.ini
resources/maps/: map1.json  map1.txt  map2.json
src/animation/: Sequence.cpp
src/bsp/: BSPTree.h  BSPTree.hpp  GridOrderTree.hpp
src/configuration/: ConfigInit.h  ConfigInit.hpp  LoggingCfg.h  MinimapCfg.h  PlayerCfg.h
src/configuration/mappers/: LoggingCfg.h  LoggingCfg.hpp  MinimapCfg.h  MinimapCfg.hpp  PlayerCfg.hpp  RenderCfg.h  RenderCfg.hpp
src/drawing/: DrawingUtils.h  RasterText.hpp
src/entity/: IEntityBase.hpp
src/environment/: AABB.hpp  AABBFace.hpp  WallFace.h  WallFace.hpp  Walls.h  Walls.hpp
src/environment/base/element/: ITickedBased.hpp
src/environment/base/entity/: IEntityBase.cpp  IEntityBase.hpp
src/environment/base/object/: IObjectBase.cpp  IObjectBase.hpp
src/environment/constructs/sprites/: Enemy.cpp  Enemy.hpp  Sprite.cpp  Sprite.hpp
src/environment/constructs/walls/: AABB.cpp  AABB.hpp  AABBFace.cpp  AABBFace.hpp
src/environment/map/: map.hpp
src/environment/player/: Player.cpp  Player.hpp
src/environment/world/: World.cpp  World.hpp
src/equipment/weapons/: Weapon.cpp
src/exceptions/: BMPOriginPositionError.h  BPPSizeError.h  FileFormatError.h  ImageColourError.h  ImageDimensionsError.h  ImageFileStreamError.h  ImagePixelError.h  LoadImageError.h  MemoryError.h
src/exceptions/buffering/: BufferIndexOutOfRange.hpp
src/exceptions/config/: INIReadError.hpp
src/exceptions/debug/: DebugLogDirCreateError.h  DebugLogDirCreateError.hpp  DebugLogWriteError.h  DebugLogWriteError.hpp  ExceededDebugMessageSize.h  ExceededDebugMessageSize.hpp
src/exceptions/hashing/: BucketIndexOccupied.h  BucketIndexOccupied.hpp  HashTableCapacity.h  HashTableCapacity.hpp  InvalidKeySize.h  InvalidKeySize.hpp  NullClassWithInheritance.h
src/exceptions/heap/: EmptyHeapException.hpp
src/exceptions/image/: BMPOriginPositionError.h  BMPOriginPositionError.hpp  BPPSizeError.h  BPPSizeError.hpp  FileFormatError.h  FileFormatError.hpp  ImageColourError.h  ImageColourError.hpp  ImageDimensionsError.h  ImageDimensionsError.hpp  ImageFileStreamError.h  ImageFileStreamError.hpp  ImagePixelError.h  ImagePixelError.hpp  PNGBitPointerOutsideMemory.hpp  PNGExceededCodeCount.hpp  PNGHeaderError.hpp  PNGInvalidBitType.hpp  PNGInvalidDataBuffer.hpp  PNGInvalidDistCode.hpp  PNGInvalidFCHECK.hpp  PNGInvalidFilterType.hpp  PNGInvalidInterlaceMethod.hpp  PNGInvalidNLEN.hpp  PNGNoEndCode.hpp  PNGNonExistantCodeReached.hpp  PNGOutsideCodeTree.hpp  PNGPaletteError.hpp  PNGUnsupportedCompressionMethod.hpp  PNGzLibDataSize.hpp  PNGzLibInvalidFlags.hpp  PixelColumnInvalidIndex.h  PixelColumnInvalidIndex.hpp
src/exceptions/map/: MapFormatError.h  MapFormatError.hpp
src/exceptions/pathfinding/: InvalidPathTargets.h  InvalidPathTargets.hpp
src/exceptions/textureLoader/: ExceededMaxTextureImport.h  ExceededMaxTextureImport.hpp
src/gui/: Canvas.cpp  Canvas.hpp
src/gui/base/: IBaseElement.cpp  IBaseElement.hpp
src/gui/button/: Button.cpp  Button.hpp
src/gui/debug_overlay/: DebugOverlay.cpp  DebugOverlay.hpp
src/gui/minimap/: Minimap.cpp  Minimap.hpp
src/gui/stats_bar/: StatsBar.cpp  StatsBar.hpp
src/hashing/: HashTable.h  HashTable.hpp
src/id/: IDGenerator.hpp
src/io/: BMPreader.hpp  JSONParser.hpp  PNGReader.hpp
src/io/configuration/: ConfigInit.cpp  ConfigInit.hpp
src/io/configuration/sections/: LoggingCfg.hpp  MinimapCfg.hpp  PlayerCfg.hpp  (+1 more)
src/io/logging/: GLDebug.hpp  TerminalColours.hpp
src/io/resource_management/: INIReader.hpp  JSONParser.hpp  PNGReader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/logging/: GLDebug.h  GLDebug.hpp  TerminalColours.h
src/logic/hashing/: HashTable.cpp  HashTable.hpp
src/logic/id/: IDGenerator.cpp
src/logic/pathfinding/: AStar.cpp  AStar.hpp  GraphNode.hpp
src/logic/queue/: MinHeap.hpp
src/map/: Coordinates.hpp  map.h  map.hpp
src/mapmaker/: mapmaker.cpp  mapmaker.hpp
src/objects/: IObjectBase.hpp
src/partitioning/: QSPTree.hpp  QuadNode.hpp
src/pathfinding/: AStar.h  AStar.hpp  GraphNode.h  GraphNode.hpp
src/physics/: Interaction.hpp
src/player/: Player.h  Player.hpp
src/raytracer/: Globals.h  Globals.hpp  Ray.hpp  Raytracer.cpp  Raytracer.h  Raytracer.hpp  Test  Test.cpp  demo.js  run
src/rendering/: Globals.hpp
src/rendering/buffering/: PBO.cpp  PBO.hpp
src/rendering/camera/: Camera.hpp
src/rendering/colour/: Colours.cpp  Colours.hpp
src/rendering/drawing/: DrawingUtils.hpp  RasterText.hpp
src/rendering/partitioning/: QSPTree.cpp  QSPTree.hpp  QuadNode.cpp  QuadNode.hpp
src/rendering/player/: Player.hpp
src/rendering/raycaster/: Raytracer.cpp  Raytracer.hpp
src/rendering/texturing/: texture.cpp  texture.hpp
src/rendering/viewmodel/: Camera.hpp  Frustrum.hpp
src/sprites/: Sprite.hpp
src/texturing/: BMPreader.h  BMPreader.hpp  ColourUtils.h  TextureColours.h  TextureColours.hpp  TextureLoader.h  TextureLoader.hpp  rgbImage.h  texture.h  texture.hpp
src/world/: World.hpp
src/world_files/: map1.txt
test/: testCases.cpp
test/asset_loading/: map_test.hpp
test/assignment_tests/: hashtable_test.cpp  htt  mht  minheap_test.cpp
test/assignment_tests/hashtable_res/: strings.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
test/assignment_tests/minheap_res/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
test/case_generator/: dungeon_gen.py  graph_node_gen.py  string_gen.py
test/framework/: catch.hpp
test/hashing/: hash_func_test.cpp  hashtable_test.cpp
test/io/: INI_read_test.cpp  JSON_read_test.cpp
test/resources/: ini_test1.ini  invalid_test.ini  invalid_test.json  json_test1.json  valid_test.ini  valid_test.json
